# contextguard

./: .gitignore  README.md  directory_structure.md  pyproject.toml
.github/workflows/: workflow.yml
contextguard/: cache.py  cli.py  config.py  exporter.py  graph.py  scanner.py  selector.py  stats.py  storage.py
contextguardrail/: blast.py  budget.py  cache.py  cli.py  config.py  exporter.py  gitutils.py  graph.py  optimizer.py  policy.py  scanner.py  selector.py  semantic.py  stats.py  storage.py  treesitter.py
tests/: test_budget.py  test_graph.py  test_scanner.py  test_selector.py
