[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "contextguardrail"
version = "0.4.0"
description = "Local-first token firewall for AI coding agents"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "typer>=0.12",
  "rich>=13.0",
  "networkx>=3.0",
  "tiktoken>=0.7"
]

[project.optional-dependencies]
treesitter = [
  "tree-sitter>=0.22",
  "tree-sitter-language-pack>=0.7"
]
embeddings = [
  "sentence-transformers>=3.0"
]
langgraph = [
  "langgraph>=0.2"
]
neo4j = [
  "neo4j>=5.0"
]
all = [
  "tree-sitter>=0.22",
  "tree-sitter-language-pack>=0.7",
  "sentence-transformers>=3.0",
  "langgraph>=0.2",
  "neo4j>=5.0"
]

[project.scripts]
contextguardrail = "contextguardrail.cli:app"

[tool.setuptools.packages.find]
include = ["contextguardrail*"]
